--- a/src/main/resources/com/virusoft/lemonhrm/views/users-content-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/users-content-view.fxml
@@ -17,117 +17,104 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane fx:id="usersContentAnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="1015.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.viewcontrollers.UsersContentController">
+<HBox fx:id="usersContentHBox" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.viewcontrollers.UsersContentController">
    <children>
-      <HBox layoutX="51.0" layoutY="37.0" prefHeight="255.0" prefWidth="912.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="37.0">
+      <AnchorPane fx:id="usersContentAnchorPane" prefHeight="663.0" prefWidth="1015.0" HBox.hgrow="ALWAYS">
          <children>
-            <AnchorPane prefHeight="255.0" prefWidth="871.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
+            <HBox layoutX="51.0" layoutY="37.0" prefHeight="255.0" prefWidth="912.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="37.0">
                <children>
-                  <Label layoutX="26.0" layoutY="33.0" text="System Users" textFill="#535c90" AnchorPane.leftAnchor="26.0">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Label>
-                  <Separator layoutX="25.0" layoutY="80.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="34.0" />
-                  <GridPane layoutX="26.0" layoutY="82.0" prefHeight="90.0" prefWidth="826.0" AnchorPane.bottomAnchor="83.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="82.0">
-                    <columnConstraints>
-                      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
-                      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
-                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
-                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                  <AnchorPane prefHeight="255.0" prefWidth="871.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
                      <children>
-                        <Label text="Username" textFill="#535c90">
+                        <Label focusTraversable="false" layoutX="26.0" layoutY="33.0" text="System Users" textFill="#535c90" AnchorPane.leftAnchor="26.0">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="15.0" />
                            </font>
                         </Label>
-                        <Label text="User Role" textFill="#535c90" GridPane.columnIndex="1">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <ComboBox maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="15.0" />
-                           </GridPane.margin>
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </ComboBox>
-                        <Label text="Employee Name" textFill="#535c90" GridPane.columnIndex="2">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <ComboBox maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="15.0" />
-                           </GridPane.margin>
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </ComboBox>
-                        <Label text="Status" textFill="#535c90" GridPane.columnIndex="3">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <TextField maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" promptText="Type for hints..." GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="15.0" />
-                           </GridPane.margin>
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
-                        </TextField>
-                        <TextField maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" promptText="Search username..." GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="15.0" />
-                           </GridPane.margin>
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
-                        </TextField>
+                        <Separator layoutX="25.0" layoutY="69.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="34.0" />
+                        <GridPane layoutX="26.0" layoutY="82.0" prefHeight="73.0" prefWidth="867.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="82.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
+                            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="200.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label alignment="BOTTOM_LEFT" focusTraversable="false" text="Username" textFill="#535c90" />
+                              <Label alignment="BOTTOM_LEFT" focusTraversable="false" text="User Role" textFill="#535c90" GridPane.columnIndex="1" />
+                              <ComboBox maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets right="15.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                              </ComboBox>
+                              <Label alignment="BOTTOM_LEFT" focusTraversable="false" text="Employee Name" textFill="#535c90" GridPane.columnIndex="2" />
+                              <ComboBox maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets right="15.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                              </ComboBox>
+                              <Label alignment="BOTTOM_LEFT" focusTraversable="false" text="Status" textFill="#535c90" GridPane.columnIndex="3" />
+                              <TextField focusTraversable="false" maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" promptText="Type for hints..." GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets right="15.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </TextField>
+                              <TextField focusTraversable="false" maxWidth="400.0" prefHeight="30.0" prefWidth="200.0" promptText="Search username..." GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets right="15.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </TextField>
+                           </children>
+                        </GridPane>
+                        <Separator focusTraversable="false" layoutX="26.0" layoutY="180.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="33.0" />
+                        <Button focusTraversable="false" layoutX="768.0" layoutY="202.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Search" AnchorPane.rightAnchor="32.0" />
+                        <Button focusTraversable="false" layoutX="642.0" layoutY="202.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Reset" AnchorPane.rightAnchor="158.0" />
                      </children>
-                  </GridPane>
-                  <Separator layoutX="26.0" layoutY="193.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="33.0" />
-                  <Button layoutX="727.0" layoutY="208.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Search" AnchorPane.rightAnchor="32.0" />
-                  <Button layoutX="601.0" layoutY="208.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="Reset" AnchorPane.rightAnchor="158.0" />
+                  </AnchorPane>
                </children>
-            </AnchorPane>
-         </children>
-      </HBox>
-      <VBox layoutX="51.0" layoutY="315.0" minHeight="248.0" prefHeight="249.0" prefWidth="912.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="315.0">
-         <children>
-            <AnchorPane prefHeight="240.0" prefWidth="200.0" style="-fx-background-color: white;" VBox.vgrow="NEVER">
+            </HBox>
+            <VBox layoutX="51.0" layoutY="315.0" minHeight="248.0" prefHeight="249.0" prefWidth="912.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="315.0">
                <children>
-                  <Button layoutX="25.0" layoutY="16.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="+ Add" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="16.0" />
-                  <Separator layoutX="25.0" layoutY="75.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="34.0" />
-                  <Label layoutX="27.0" layoutY="95.0" prefHeight="24.0" prefWidth="201.0" text="(2) Records Found" textFill="#535c90" AnchorPane.leftAnchor="27.0">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
+                  <AnchorPane prefHeight="240.0" prefWidth="200.0" style="-fx-background-color: white;" VBox.vgrow="NEVER">
+                     <children>
+                        <Button focusTraversable="false" layoutX="25.0" layoutY="18.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="112.0" text="+ Add  " AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="18.0" />
+                        <Separator focusTraversable="false" layoutX="25.0" layoutY="73.0" prefHeight="0.0" prefWidth="812.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="34.0" />
+                        <Label focusTraversable="false" layoutX="27.0" layoutY="91.0" prefHeight="24.0" prefWidth="201.0" text="(2) Records Found" textFill="#535c90" AnchorPane.leftAnchor="27.0" />
+                     </children>
+                  </AnchorPane>
+                  <TableView focusTraversable="false" minHeight="100.0" prefHeight="100.0" prefWidth="852.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                      <TableColumn prefWidth="124.0" text="Username" />
+                      <TableColumn prefWidth="175.0" text="User Role" />
+                        <TableColumn prefWidth="230.0" text="Employee Name" />
+                        <TableColumn prefWidth="197.0" text="Status" />
+                        <TableColumn prefWidth="144.0" text="Actions" />
+                    </columns>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
                </children>
-            </AnchorPane>
-            <TableView minHeight="100.0" prefHeight="200.0" prefWidth="872.0" VBox.vgrow="ALWAYS">
-              <columns>
-                <TableColumn prefWidth="124.0" text="Username" />
-                <TableColumn prefWidth="175.0" text="User Role" />
-                  <TableColumn prefWidth="230.0" text="Employee Name" />
-                  <TableColumn prefWidth="197.0" text="Status" />
-                  <TableColumn prefWidth="144.0" text="Actions" />
-              </columns>
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" />
-               </VBox.margin>
-            </TableView>
+            </VBox>
          </children>
-      </VBox>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</HBox>
