--- a/src/main/resources/com/virusoft/lemonhrm/views/forgot-your-password-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/forgot-your-password-view.fxml
@@ -10,7 +10,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="286.0"
             prefWidth="474.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virusoft.lemonhrm.viewcontroller.ForgotYourPasswordController">
+            fx:controller="com.virusoft.lemonhrm.view.ForgotYourPasswordView">
     <Label layoutX="58.0" layoutY="47.0" prefHeight="22.0" prefWidth="358.0"
            text="Enter the email address associated with your account">
         <effect>
