--- a/src/main/resources/com/virusoft/lemonhrm/views/pim-user-navbar-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/pim-user-navbar-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="adminUserNavbar" prefHeight="443.0" prefWidth="204.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.viewcontroller.AdminUserNavbarController">
+<Pane fx:id="adminUserNavbar" prefHeight="443.0" prefWidth="204.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.view.AdminUserNavbarView">
     <children>
         <TextField fx:id="searchTextField" layoutX="48.0" layoutY="13.0" prefHeight="24.0" prefWidth="142.0" promptText="Search..." />
         <Button fx:id="dashboardButton" contentDisplay="TEXT_ONLY" layoutX="-1.0" layoutY="47.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="205.0" text="Dashboard  " textFill="#433d61f2">
