--- a/src/main/resources/com/virusoft/lemonhrm/views/users-content-view.fxml
+++ b/src/main/resources/com/virusoft/lemonhrm/views/users-content-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <HBox fx:id="usersContentHBox" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.virusoft.lemonhrm.viewcontroller.UsersContentController">
+      fx:controller="com.virusoft.lemonhrm.view.UsersContentView">
     <children>
         <AnchorPane fx:id="usersContentAnchorPane" prefHeight="663.0" prefWidth="1015.0" HBox.hgrow="ALWAYS">
             <children>
